--- a/BankSiteWebsite/BankSiteWebsite.csproj
+++ b/BankSiteWebsite/BankSiteWebsite.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DasdhboardHomeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -352,6 +353,12 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BankSiteQBOData\BankSiteQBOData.csproj">
+      <Project>{a3a859f0-6cdf-4942-89b9-8c173b8d5688}</Project>
+      <Name>BankSiteQBOData</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
